--- a/index.html
+++ b/index.html
@@ -1,1 +1,187 @@
-<h1>Hi, my name is Megan</h1>
+<!doctype html>
+<html>
+
+<head>
+    <title>Final Project</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/my-style.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script>
+        function initialize() {
+            var mapOptions = {
+                zoom: 15,
+                center: new google.maps.LatLng(30.231082, -97.79343399999999)
+            }
+            var map = new google.maps.Map(document.getElementById('map-canvas'),
+                mapOptions);
+
+            var image = 'images/beachflag.png';
+            var myLatLng = new google.maps.LatLng(30.231082, -97.79343399999999);
+            var beachMarker = new google.maps.Marker({
+                position: myLatLng,
+                map: map,
+                icon: HTMLImageElement
+            });
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+</head>
+
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#landing">Austin Acro Community</a>
+            </div>
+
+            <!-- Collect the nav links for toggling -->
+            <div class="collapse navbar-collapse" id="example-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#who-we-are">Who We Are</a>
+                    </li>
+                    <li>
+                        <a href="#benefits">Benefits</a>
+                    </li>
+                    <li>
+                        <a href="#activities">Activities</a>
+                    </li>
+                    <li>
+                        <a href="#">Donate</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Lading -->
+    <section id="landing" class="container-fluid text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Austin Acro Community</h2>
+                    <p>Help us to keep Friday jams happening</p>
+                    <a href="#">Donate</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div>
+        <div class="row visible-xs">
+            <div class="col-sm-3" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a></div>
+        </div>
+        <div class="row visible-xs">
+            <div class="col-sm-3" id="location"><i class="fa fa-hand-o-down"></i>We do our friday jams at Taperstry dance studio, listed below. </div>
+        </div>
+        <div id="map-canvas"></div>
+    </div>
+    <!-- Who We Are -->
+    <section id="who-we-are" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>The Community</h2>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img class="img-responsive" src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xta1/v/t1.0-9/s720x720/11760191_10153077218302098_4987802244700012195_n.jpg?oh=38db76c7c812efa4cc6f88efc176b9fa&oe=56384AE2" alt="logo" />
+                </div>
+                <div class="col-sm-8">
+                    <p>We are an open community dedicated to all things acrobatic. This includes AcroYoga, Thai Massage, gymnastics, slacklining, poi, hooping, juggling, and other circus arts. If you want to purchase mats to bring to jams here are the 2 foot square, 1 inch thick "MMA Mats" we use: http://www.rubberflooringinc.com/interlocking-tile/foam/1-jumbo-soft-tile.html Get 12 tiles to make a space for one acro pair to workout. They have a coupon for 28% off ("FB28") regularly bringing a mat set shipped incl. tax ~$87.
+                        <br>
+                        <br> The old wondermats are discontinued.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---benefits-->
+    <section id="benefits" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>Benefits of Acro!</h2>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" />
+
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                </div>
+                <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" />
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                </div>
+                <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" />
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                </div>
+                <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" />
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                </div>
+                <p></p>
+            </div>
+        </div>
+    </section>
+
+    <!--activities-->
+    <section id="activities" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>The Jams!</h2>
+
+                </div>
+            </div>
+            <div class="row">
+
+                <div class="col-md-7">
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+
+                </div>
+                <div class="col-md-5">
+                    <img class="img-responsive" src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/s720x720/11751477_10153092454742098_251948318079638724_n.jpg?oh=f0e406a37358c0724de0d4a1f8f88501&oe=56590D3C" alt="logo" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="foot" class="container-fluid">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <p>Dandelion cucumber earthnut pea peanut soko zucchini.Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-4 col-sm-2">
+                    <a href="#">Donate</a>
+                </div>
+                <div class="col-sm-offset-1 col-sm-2 ">
+                    <a href="#">Learn</a>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
+</body>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
+</html>
