--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Final Project</title>
+    <title>MTK</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/my-style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script>
@@ -41,23 +41,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#landing">Austin Acro Community</a>
+                <a class="navbar-brand" href="#landing">Megan Taylor King </a>
             </div>
 
             <!-- Collect the nav links for toggling -->
             <div class="collapse navbar-collapse" id="example-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#who-we-are">Who We Are</a>
+                        <a href="#who-we-are" class="top-buttons">Who I Am</a>
                     </li>
                     <li>
-                        <a href="#benefits">Benefits</a>
+                        <a href="#benefits" class="top-buttons">Past Work</a>
                     </li>
                     <li>
-                        <a href="#activities">Activities</a>
-                    </li>
-                    <li>
-                        <a href="#">Donate</a>
+                        <a href="#" class="top-buttons">Inspiration</a>
                     </li>
                 </ul>
             </div>
@@ -71,9 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2>Austin Acro Community</h2>
-                    <p>Help us to keep Friday jams happening</p>
-                    <a href="#">Donate</a>
+                  
                 </div>
             </div>
         </div>
@@ -119,21 +114,21 @@
             </div>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" />
+                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" />
 
-                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                    <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" />
-                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" />
+                    <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" />
-                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" />
+                    <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img id="short" src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" />
-                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" />
+                    <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <p></p>
             </div>
@@ -170,13 +165,13 @@
                 </div>
             </div>
             <div class="row" >
-               <div class="col-xs-3"></div>
+               <div class="col-xs-4"></div>
                 <div class="col-xs-2">
                     <a href="#">Donate</a>
-                </div><div class="col-xs-2"></div>
+                </div>
                 <div class="col-xs-2 ">
                     <a href="#">Learn</a>
-                    <div class="col-xs-3"></div>
+                    <div class="col-xs-4"></div>
                 </div>
             </div>
         </div>
