--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/my-style.css" />
-   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script>
@@ -68,14 +68,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                  
+
                 </div>
             </div>
         </div>
     </section>
     <div>
         <div class="row visible-xs">
-            <div class="col-sm-3" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a></div>
+            <div class="col-sm-3" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
+            </div>
         </div>
         <div class="row visible-xs">
             <div class="col-sm-3" id="location"><i class="fa fa-hand-o-down"></i>We do our friday jams at Taperstry dance studio, listed below. </div>
@@ -114,20 +115,20 @@
             </div>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" />
+                    <img src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" />
 
                     <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" />
+                    <img src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" />
                     <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" />
+                    <img src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" />
                     <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                    <img  src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" />
+                    <img src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" />
                     <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
                 <p></p>
@@ -164,8 +165,8 @@
                     <p>Dandelion cucumber earthnut pea peanut soko zucchini.Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 </div>
             </div>
-            <div class="row" >
-               <div class="col-xs-4"></div>
+            <div class="row">
+                <div class="col-xs-4"></div>
                 <div class="col-xs-2">
                     <a href="#">Donate</a>
                 </div>
