--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    
+
 </head>
 
 <body>
@@ -47,17 +47,22 @@
     <!-- Lading -->
     <section id="landing" class="container-fluid text-center">
         <div class="topleft">
-            <a href="https://www.facebook.com/megantking">
-                <img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11230599_10205975254932960_2843176119736684768_n.jpg?oh=f73cc46209729c5da33fec5f8053ae81&oe=55F5DC13" /> </a>
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <a href="https://www.facebook.com/megantking">
+                        <img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11230599_10205975254932960_2843176119736684768_n.jpg?oh=f73cc46209729c5da33fec5f8053ae81&oe=55F5DC13" /> </a>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-11" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
                 </div>
             </div>
         </div>
-        <div class="topright">
-        <div class="row">
-            </div></div>
-    
+        <div class="topright hidden-sm hidden-xs visible-md visible-lg">
+            <div class="row">
+            </div>
+        </div>
+
 
         <!-- Who We Are -->
         <section id="who-we-are" class="container-fluid">
