text changes and whatnot

--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" />
+                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" class="short"/>
 
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" />
+                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" />
+                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" class="short" />
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" />
+                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <p></p>
