--- a/index.html
+++ b/index.html
@@ -46,18 +46,19 @@
 
     <!-- Lading -->
     <section id="landing" class="container-fluid text-center">
-        <div class="topleft">
+        <div class="top">
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <a href="https://www.facebook.com/megantking">
                         <img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11230599_10205975254932960_2843176119736684768_n.jpg?oh=f73cc46209729c5da33fec5f8053ae81&oe=55F5DC13" /> </a>
                 </div>
             </div>
-            <div class="row">
+           <!-- <div class="row">
                 <div class="col-xs-11" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
                 </div>
-            </div>
+            </div>-->
         </div>
+        <div class="topleft hidden-sm hidden-xs visible-md visible-lg"></div>
         <div class="topright hidden-sm hidden-xs visible-md visible-lg">
             <div class="row">
             </div>
@@ -69,13 +70,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <h2>The Community</h2>
+                     <br><br>   <h2>Who I Am</h2>
 
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xta1/v/t1.0-9/s720x720/11760191_10153077218302098_4987802244700012195_n.jpg?oh=38db76c7c812efa4cc6f88efc176b9fa&oe=56384AE2" alt="logo" />
+                        <img class="img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=47&txt=500%C3%97350&w=500&h=350" alt="logo" />
                     </div>
                     <div class="col-sm-8">
                         <p id="first-par">We are an open community dedicated to all things acrobatic. This includes AcroYoga, Thai Massage, gymnastics, slacklining, poi, hooping, juggling, and other circus arts. If you want to purchase mats to bring to jams here are the 2 foot square, 1 inch thick "MMA Mats" we use: http://www.rubberflooringinc.com/interlocking-tile/foam/1-jumbo-soft-tile.html Get 12 tiles to make a space for one acro pair to workout. They have a coupon for 28% off ("FB28") regularly bringing a mat set shipped incl. tax ~$87.
@@ -90,26 +91,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <h2>Benefits of Acro!</h2>
+                        <h1>Past Work</h1>
+                        <h3>Samples</h3>
 
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.36.29%20PM.jpg" alt="logo" class="short"/>
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
 
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.31.13%20PM.jpg" alt="logo" class="short"/>
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.34.10%20PM.jpg" alt="logo" class="short" />
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short" />
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
-                        <img src="../img/Screen%20Shot%202015-07-29%20at%207.39.24%20PM.jpg" alt="logo" class="short"/>
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <p></p>
@@ -133,7 +135,7 @@
 
                     </div>
                     <div class="col-md-5">
-                        <img class="img-responsive" src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/s720x720/11751477_10153092454742098_251948318079638724_n.jpg?oh=f0e406a37358c0724de0d4a1f8f88501&oe=56590D3C" alt="logo" />
+                        <img class="img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=47&txt=500%C3%97350&w=500&h=350" alt="logo" />
                     </div>
                 </div>
             </div>
