--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Lading -->
     <section id="landing" class="container-fluid text-center">
-        <div class="top">
+        <div class="topleft">
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <a href="https://www.facebook.com/megantking">
@@ -58,7 +58,7 @@
                 </div>
             </div>-->
         </div>
-        <div class="topleft hidden-sm hidden-xs visible-md visible-lg"></div>
+      
         <div class="topright hidden-sm hidden-xs visible-md visible-lg">
             <div class="row">
             </div>
