--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <div class=" col-sm-12 col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
 
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
-                    <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <div class="col-sm-12 col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
-                    <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <div class=" col-sm-12 col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short" />
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
-                    <div class="col-sm-offset-1 col-sm-4 col-md-offset-0 col-md-3">
+                    <div class=" col-sm-12 col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
