--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                         <img class="img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=47&txt=500%C3%97350&w=500&h=350" alt="logo" />
                     </div>
                     <div class="col-sm-8">
-                        <p id="first-par">We are an open community dedicated to all things acrobatic. This includes AcroYoga, Thai Massage, gymnastics, slacklining, poi, hooping, juggling, and other circus arts. If you want to purchase mats to bring to jams here are the 2 foot square, 1 inch thick "MMA Mats" we use: http://www.rubberflooringinc.com/interlocking-tile/foam/1-jumbo-soft-tile.html Get 12 tiles to make a space for one acro pair to workout. They have a coupon for 28% off ("FB28") regularly bringing a mat set shipped incl. tax ~$87.
-                            <br>
-                            <br> The old wondermats are discontinued.</p>
+                        <p id="first-par">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                 </div>
             </div>
@@ -97,20 +95,20 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class="  col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
 
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class=" col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
-                    <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class=" col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short" />
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
-                    <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class=" col-md-6 col-lg-3">
                         <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
