--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/my-style.css" />
-   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
@@ -53,12 +53,12 @@
                         <img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11230599_10205975254932960_2843176119736684768_n.jpg?oh=f73cc46209729c5da33fec5f8053ae81&oe=55F5DC13" /> </a>
                 </div>
             </div>
-           <!-- <div class="row">
+            <!-- <div class="row">
                 <div class="col-xs-11" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
                 </div>
             </div>-->
         </div>
-      
+
         <div class="topright hidden-sm hidden-xs visible-md visible-lg">
             <div class="row">
             </div>
@@ -70,7 +70,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                     <br><br>   <h2>Who I Am</h2>
+                        <br>
+                        <br>
+                        <h2>Who I Am</h2>
 
                     </div>
                 </div>
@@ -96,12 +98,8 @@
                 </div>
                 <div class="row">
                     <div class="  col-md-6 col-lg-3">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short" />
 
-                        <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
-                    </div>
-                    <div class=" col-md-6 col-lg-3">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class=" col-md-6 col-lg-3">
@@ -109,7 +107,11 @@
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <div class=" col-md-6 col-lg-3">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short"/>
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short" />
+                        <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                    </div>
+                    <div class=" col-md-6 col-lg-3">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=23&txt=250%C3%97250&w=250&h=250" alt="logo" class="short" />
                         <p class="text-center">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                     </div>
                     <p></p>
